[tool.poetry]
name = "yandexapi"
version = "0.1.0"
description = ""
authors = ["Amir Khanov <darlycerher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
asyncpg = "^0.26.0"
fastapi-limiter = "^0.1.4"
config = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
